--- a/app/src/main/res/drawable/click_selector.xml
+++ b/app/src/main/res/drawable/click_selector.xml
@@ -1,16 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
+    <item android:state_focused="true">
         <shape android:shape="rectangle">
-            <corners android:radius="4dp" />
-            <solid android:color="#00500f" />
+            <solid android:color="#A5D6A7" />
+        </shape>
+    </item>
+
+    <item android:state_pressed="true">
+        <shape>
+            <corners android:bottomLeftRadius="10dp"
+                android:bottomRightRadius="10dp"
+                android:radius="10dp"
+                android:topLeftRadius="10dp"
+                android:topRightRadius="10dp" />
+            <stroke android:width="1dip" android:color="#5e7974" />
+
+            <gradient android:angle="-90"
+                android:startColor="#A5D6A7"
+                android:endColor="#212121"/>
         </shape>
     </item>
 
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="4dp" />
-            <solid android:color="#087002" />
+            <corners android:bottomLeftRadius="10dp"
+                android:bottomRightRadius="10dp"
+                android:radius="10dp"
+                android:topLeftRadius="10dp"
+                android:topRightRadius="10dp" />
+            <stroke android:width="1dip"
+                android:color="#FAFAFA" />
         </shape>
     </item>
 </selector>
