--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:tint="#FFFFFF"
-        android:src="@drawable/logo_app"
+        android:src="@drawable/logo"
         android:contentDescription="@null" />
 
     <LinearLayout
